# HuntMate

./: .gitignore  README.md  api.cfg.example  app.py  huntmate_core.py  models.py  prompts.py  pyproject.toml  requirements.txt  run_chat.py  settings.py  styles.css  todo.md
my_linkedin_api/: client.py  cookie_repository.py  linkedin.py
src/: huntmate_core.py  models.py  prompts.py  settings.py
src/tools/: indeed_search.py  jobspy_search.py  linkedin_search.py
static/css/: styles.css
tools/: jobspy_search.py  linkedin_search.py
